--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  	<style>
-  		body {
-  			width: 100px;
-  			height: 100px;
-  		}
-  	</style>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Döviz Rozeti</title>
+  <style>
+    html, body {
+      padding: 0;
+      margin: -2px 0;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    body {
+      width: 500px;
+      background-color: #364353;
+    }
+    .title {
+      color:#f5f5f5;
+      font-size:16px;
+      text-align: right;
+      padding:15px 15px 0 0;
+    }
+    .ps {
+      color:#f5f5f5;
+      font-size:10px;
+      text-align: center;
+      padding: 5px;
+    }
+  </style>
+</head>
   <body>
-    <div>Dollar Extension!</div>
+    <div class="title">Amerikan Doları</div>
+    <iframe id="graph" src="https://grafik.doviz.com/android/C/USD/minute" width="500" height="300" frameborder="0"></iframe>
+    <div class="ps">Diğer döviz kurları kısa bir süre sonra eklenecektir.</div>
   </body>
 </html>
